--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <link rel="stylesheet" href="dist/app.css">
   </head>
   <body>
+    <header>
+      <div class="container">
+        <div class="row top-header">
+          <div class="col-lg-6">
+            <img src="img/logo.svg" alt="logo">
+          </div>
+          <div class="col-lg-6">
+            <nav>
+              <ul>
+                <li><a href="#"><h5>Solutions</h5></a></li>
+                <li><a href="#"><h5>Pricing</h5></a></li>
+                <li><a href="#"><h5>Blog</h5></a></li>
+                <li><a href="#"><h5>Sign in</h5></a></li>
+              </ul>
+            </nav>
+            <div class="primary-button">
+              <img src="img/google-logo.svg" alt="google">
+              <h5>Sign up</h5>
+
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </header>
 
   </body>
 </html>
