--- a/index.html
+++ b/index.html
@@ -24,9 +24,28 @@
             <div class="primary-button">
               <img src="img/google-logo.svg" alt="google">
               <h5>Sign up</h5>
-
-
             </div>
+          </div>
+        </div>
+        <div class="row banner">
+          <div class="col-lg-6">
+            <h1>Understand, recognize and develop your people</h1>
+            <p>Teambit helps teams create a high performing culture with regular feedback.</p>
+            <div class="buttons">
+              <div class="secondary-button">
+                <img src="img/google-logo.svg" alt="google">
+                <h5>Sign up with Google</h5>
+              </div>
+              <p>or</p>
+              <div class="secondary-button">
+                <img src="img/slack-logo.svg" alt="slack">
+                <h5>Sign up with Slack</h5>
+              </div>
+            </div>
+            <p>or use yout email address.</p>
+          </div>
+          <div class="col-lg-6">
+            <img src="img/illustration-main.jpg" alt="banner">
 
           </div>
 
