--- a/index.html
+++ b/index.html
@@ -46,14 +46,65 @@
           </div>
           <div class="col-lg-6">
             <img src="img/illustration-main.jpg" alt="banner">
-
           </div>
-
         </div>
-
+      </div>
+    </header>
+    <section id="sec-01" >
+      <div class="container">
+        <div class="row">
+          <h3>Traditional people processes lead to disengagement and turnover.</h3>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="img/hardcore.png" alt="sheets">
+            <p>They are hardcore, formal and disconnected</p>
+          </div>
+          <div class="col-lg-4">
+            <img src="img/nofeedback.png" alt="no feedback">
+            <p>They don't encourage regular feedback</p>
+          </div>
+          <div class="col-lg-4">
+            <img src="img/notsafe.png" alt="not safe">
+            <p>They don't make it safe to speak up</p>
+          </div>
+        </div>
+        <div class="row">
+          <img src="img/before.png" alt="rabbit">
+        </div>
+        <div class="row">
+          <div></div>
+        </div>
       </div>
 
-    </header>
+      <div class="container">
+        <div class="row">
+          <h3>It doesn't have to be like that. Teambit is a modern solution that<br>teammates love.</h3>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="img/lightweight.png" alt="award">
+            <p>Tt's lightweight fun and interconnected</p>
+          </div>
+          <div class="col-lg-4">
+            <img src="img/feedbacksuggestions.png" alt="suggestions">
+            <p>It encourages regular feedbak with contextual requests</p>
+          </div>
+          <div class="col-lg-4">
+            <img src="img/safe.png" alt="">
+            <p>It creates a safe environment for dialog</p>
+          </div>
+        </div>
+        <div class="row">
+          <img src="img/after.png" alt="rabbit">
+        </div>
+        <div class="row">
+          <h3>Here is how it works</h3>
+        </div>
+      </div>
+
+
+    </section>
 
   </body>
 </html>
