--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="row banner">
           <div class="col-lg-6">
             <h1>Understand, recognize and develop your people</h1>
-            <p>Teambit helps teams create a high performing culture with regular feedback.</p>
+            <p class="large">Teambit helps teams create a high performing culture with regular feedback.</p>
             <div class="buttons">
               <div class="secondary-button">
                 <img src="img/google-logo.svg" alt="google">
@@ -103,6 +103,70 @@
         </div>
       </div>
 
+
+    </section>
+    <section id="sec-02">
+      <div class="container-full">
+
+        <div class="row">
+          <div class="col-lg-6">
+            <img src="img/employee-feedback.jpg" alt="employee feedback">
+          </div>
+          <div class="col-lg-3">
+            <h3>Feedback to help teammates improve</h3>
+            <p class="large">Empower yout teammatesto know in realtime what they are doing well and what they need to improve.</p>
+            <a href="#">Learn more</a>
+            <img src="img/communication.jpg" alt="communication">
+          </div>
+          <div class="col-lg-offset-3">
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-offset-3">
+          </div>
+          <div class="col-lg-3">
+            <h3>Surveys to help team be better</h3>
+            <p class="large">Get real-time insights into your team with research-backed, lighyweight and regular surveys.</p>
+            <a href="#">Learn more</a>
+            <img src="img/insights.jpg" alt="insights">
+          </div>
+          <div class="col-lg-6">
+            <img src="img/employee-survey.jpg" alt="employee survey">
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <img src="img/performance-review.jpg" alt="performance">
+          </div>
+          <div class="col-lg-3">
+            <h3>Reviews to help teammates get a fair evaluation</h3>
+            <p class="large">Make better compensation and promotion decisions with objective and quick performance reviwes.</p>
+            <a href="#">Learn more</a>
+            <img src="img/review.jpg" alt="review">
+          </div>
+          <div class="col-lg-offset-3">
+          </div>
+        </div>
+
+
+        <div class="row">
+          <div class="col-lg-offset-3">
+          </div>
+          <div class="col-lg-3">
+            <h3>Praise to help teammatesfeel valued</h3>
+            <p class="large">Make it a habit to regonize and praise people who do great work.</p>
+            <a href="#">Learn more</a>
+            <img src="img/recognition.jpg" alt="recognition">
+          </div>
+          <div class="col-lg-6">
+            <img src="img/employee-survey.jpg" alt="employee survey">
+          </div>
+        </div>
+
+
+      </div>
 
     </section>
 
