Section 03, Footer (New colors)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="container">
         <div class="row top-header">
           <div class="col-lg-6">
-            <img src="img/logo.svg" alt="logo">
+            <img src="img/TB_logo.png" alt="logo">
           </div>
           <div class="col-lg-6">
             <nav>
@@ -116,7 +116,7 @@
             <h3>Feedback to help teammates improve</h3>
             <p class="large">Empower yout teammatesto know in realtime what they are doing well and what they need to improve.</p>
             <a href="#">Learn more</a>
-            <img src="img/communication.jpg" alt="communication">
+            <img class="smaller" src="img/communication.jpg" alt="communication">
           </div>
           <div class="col-lg-offset-3">
           </div>
@@ -129,7 +129,7 @@
             <h3>Surveys to help team be better</h3>
             <p class="large">Get real-time insights into your team with research-backed, lighyweight and regular surveys.</p>
             <a href="#">Learn more</a>
-            <img src="img/insights.jpg" alt="insights">
+            <img class="smaller" src="img/insights.jpg" alt="insights">
           </div>
           <div class="col-lg-6">
             <img src="img/employee-survey.jpg" alt="employee survey">
@@ -144,7 +144,7 @@
             <h3>Reviews to help teammates get a fair evaluation</h3>
             <p class="large">Make better compensation and promotion decisions with objective and quick performance reviwes.</p>
             <a href="#">Learn more</a>
-            <img src="img/review.jpg" alt="review">
+            <img class="smaller" src="img/review.jpg" alt="review">
           </div>
           <div class="col-lg-offset-3">
           </div>
@@ -158,17 +158,129 @@
             <h3>Praise to help teammatesfeel valued</h3>
             <p class="large">Make it a habit to regonize and praise people who do great work.</p>
             <a href="#">Learn more</a>
-            <img src="img/recognition.jpg" alt="recognition">
+            <img class="smaller" src="img/recognition.jpg" alt="recognition">
           </div>
           <div class="col-lg-6">
             <img src="img/employee-survey.jpg" alt="employee survey">
           </div>
         </div>
 
-
       </div>
 
     </section>
+
+    <section id="sec-03">
+      <div class="container">
+        <div class="row">
+          <h1>See Teambit for yourself.<br>Get started in seconds <span><img src="img/happy.svg" alt=""></span></h1>
+          <div class="card">
+            <p>We are experiencing what Gallup calls 'an employee engagement crisis'. Just one-third of people at work are engaged.<br></p>
+            <p>To improve performance and engagement companies rely on the same principles as industrial-age factories. But all this annual performance reviews and hundred-question surveys don't work anymore. People want regular feedback. Leaders who don't embrace this change end up with misaligned, disengaged and dwindling team.<br></p>
+            <p>We designed Teambit to change that. It improves teams to make feedback a daily habit. Everybody knows what they are doing well and what they need to improve, leading to better performing, engaged and happier teams.<br></p>
+            <p>We are on a mission to make worklife exciting. Com join us.</p>
+            <div>
+              <img src="img/alex.png" alt="Alex">
+              <img src="img/bohdan.png" alt="">
+              <div>
+                <p class="large">Alex and Bohdan</p>
+                <p>Co-Founders at Teambit</p>
+              </div>
+            </div>
+          </div>
+          <div class="buttons">
+            <div class="secondary-button">
+              <img src="img/google-logo.svg" alt="google">
+              <h4>Sign up with Google</h4>
+            </div>
+            <p>or</p>
+            <div class="secondary-button">
+              <img src="img/slack-logo.svg" alt="slack">
+              <h4>Sign up with Slack</h4>
+            </div>
+          </div>
+          <p>or use yout email address.</p>
+        </div>
+
+      </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="img/TB_logo-small.png" alt="logo small">
+            <h4><a href="#"><b>Teambit<b></a> helps to create high performing cultures by making feedback a daily habit.</h4>
+          </div>
+          <div class="col-lg-8">
+            <div class="col-lg-offset-1"></div>
+            <div class="col-lg-2">
+              <h4>Product</h4>
+              <nav>
+                <ul>
+                  <li>Feedback</li>
+                  <li>Surveys</li>
+                  <li>reviews</li>
+                  <li>Praise</li>
+                  <li>Stack Integration</li>
+                  <li>Schedule a demo</li>
+                  <li>Pricing</li>
+                </ul>
+              </nav>
+            </div>
+            <div class="col-lg-2">
+              <h4>About</h4>
+              <nav>
+                <ul>
+                  <li>Feedback</li>
+                  <li>Surveys</li>
+                  <li>reviews</li>
+                  <li>Praise</li>
+                </ul>
+              </nav>
+            </div>
+            <div class="col-lg-2">
+              <h4>Connect</h4>
+              <nav>
+                <ul>
+                  <li>Feedback</li>
+                  <li>Surveys</li>
+                  <li>reviews</li>
+                  <li>Praise</li>
+                </ul>
+              </nav>
+            </div>
+            <div class="col-lg-2">
+              <h4>Lobs</h4>
+              <nav>
+                <ul>
+                  <li>Feedback</li>
+                  <li>Surveys</li>
+                  <li>reviews</li>
+                  <li>Praise</li>
+                </ul>
+              </nav>
+            </div>
+            <div class="col-lg-2">
+              <h4>From the blog</h4>
+              <nav>
+                <ul>
+                  <li>How to change your company culture: a four-step framework</li>
+                  <li>How teams can be more productive by killing 8-hours workday</li>
+                  <li>How do build high performing teams sinpired by nature</li>
+                  <li>View all</li>
+                </ul>
+              </nav>
+            </div>
+            <div class="col-lg-offset-1"></div>
+
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </footer>
 
   </body>
 </html>
