--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Teambit</title>
+
+    <!-- FONT AWESOME 5 - gmail account -->
+    <script src="https://kit.fontawesome.com/6f40fb596f.js" crossorigin="anonymous"></script>
+
+    <!-- CSS - STYLE -->
     <link rel="stylesheet" href="dist/app.css">
+
   </head>
   <body>
     <header>
       <div class="container">
         <div class="row top-header">
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-6 col-sm-6">
             <img src="img/TB_logo.png" alt="logo">
           </div>
-          <div class="col-lg-6">
+          <div class="full-menu col-lg-6 hidden-md hidden-sm">
             <nav>
               <ul>
                 <li><a href="#"><h5>Solutions</h5></a></li>
@@ -26,9 +32,14 @@
               <h5>Sign up</h5>
             </div>
           </div>
+
+          <div class="bars-menu hidden-lg col-md-6 col-sm-6">
+            <a><i class="fas fa-bars"></i></a>
+          </div>
+
         </div>
         <div class="row banner">
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-12 col-sm-12">
             <h1>Understand, recognize and develop your people</h1>
             <p class="large">Teambit helps teams create a high performing culture with regular feedback.</p>
             <div class="buttons">
@@ -44,7 +55,7 @@
             </div>
             <p>or use yout email address.</p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-12 col-sm-12">
             <img src="img/illustration-main.jpg" alt="banner">
           </div>
         </div>
@@ -56,15 +67,15 @@
           <h3>Traditional people processes lead to disengagement and turnover.</h3>
         </div>
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-12 col-sm-12">
             <img src="img/hardcore.png" alt="sheets">
             <p>They are hardcore, formal and disconnected</p>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-12 col-sm-12">
             <img src="img/nofeedback.png" alt="no feedback">
             <p>They don't encourage regular feedback</p>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-12 col-sm-12">
             <img src="img/notsafe.png" alt="not safe">
             <p>They don't make it safe to speak up</p>
           </div>
@@ -82,15 +93,15 @@
           <h3>It doesn't have to be like that. Teambit is a modern solution that<br>teammates love.</h3>
         </div>
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-12 col-sm-12">
             <img src="img/lightweight.png" alt="award">
             <p>Tt's lightweight fun and interconnected</p>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-12 col-sm-12">
             <img src="img/feedbacksuggestions.png" alt="suggestions">
             <p>It encourages regular feedbak with contextual requests</p>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-12 col-sm-12">
             <img src="img/safe.png" alt="">
             <p>It creates a safe environment for dialog</p>
           </div>
@@ -109,58 +120,58 @@
       <div class="container-full">
 
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-12 col-sm-12">
             <img src="img/employee-feedback.jpg" alt="employee feedback">
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-12 col-sm-12">
             <h3>Feedback to help teammates improve</h3>
             <p class="large">Empower yout teammatesto know in realtime what they are doing well and what they need to improve.</p>
             <a href="#">Learn more</a>
-            <img class="smaller" src="img/communication.jpg" alt="communication">
+            <img src="img/communication.jpg" alt="communication">
           </div>
-          <div class="col-lg-offset-3">
+          <div class="col-lg-offset-3 hidden-md hidden-sm">
           </div>
         </div>
 
         <div class="row">
-          <div class="col-lg-offset-3">
+          <div class="col-lg-offset-3 hidden-md hidden-sm">
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-12 col-sm-12">
             <h3>Surveys to help team be better</h3>
             <p class="large">Get real-time insights into your team with research-backed, lighyweight and regular surveys.</p>
             <a href="#">Learn more</a>
-            <img class="smaller" src="img/insights.jpg" alt="insights">
+            <img src="img/insights.jpg" alt="insights">
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-12 col-sm-12">
             <img src="img/employee-survey.jpg" alt="employee survey">
           </div>
         </div>
 
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-12 col-sm-12">
             <img src="img/performance-review.jpg" alt="performance">
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-12 col-sm-12">
             <h3>Reviews to help teammates get a fair evaluation</h3>
             <p class="large">Make better compensation and promotion decisions with objective and quick performance reviwes.</p>
             <a href="#">Learn more</a>
-            <img class="smaller" src="img/review.jpg" alt="review">
+            <img src="img/review.jpg" alt="review">
           </div>
-          <div class="col-lg-offset-3">
+          <div class="col-lg-offset-3 hidden-md hidden-sm">
           </div>
         </div>
 
 
         <div class="row">
-          <div class="col-lg-offset-3">
+          <div class="col-lg-offset-3 hidden-md hidden-sm">
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-12 col-sm-12">
             <h3>Praise to help teammatesfeel valued</h3>
             <p class="large">Make it a habit to regonize and praise people who do great work.</p>
             <a href="#">Learn more</a>
-            <img class="smaller" src="img/recognition.jpg" alt="recognition">
+            <img src="img/recognition.jpg" alt="recognition">
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-12 col-sm-12">
             <img src="img/employee-survey.jpg" alt="employee survey">
           </div>
         </div>
@@ -207,11 +218,11 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-12 col-sm-12">
             <img src="img/TB_logo-small.png" alt="logo small">
             <h4><a href="#"><b>Teambit<b></a> helps to create high performing cultures by making feedback a daily habit.</h4>
           </div>
-          <div class="col-lg-8">
+          <div class="col-lg-8 col-md-12 col-sm-12">
             <div class="col-lg-offset-1"></div>
             <div class="col-lg-2">
               <h4>Product</h4>
